[gd_scene load_steps=8 format=2]

[ext_resource path="res://Data/LevelEditor/Game_Objects/Enemys/Scripts/Spinner_Enemy.gd" type="Script" id=1]
[ext_resource path="res://Data/Sprites/Enemys/Spinner_ss.png" type="Texture" id=2]
[ext_resource path="res://Data/Sprites/Entity_Sprites/Coin.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 20.0
height = 0.0

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[node name="Spinner_Enemy" type="StaticBody2D"]
collision_layer = 26
collision_mask = 18
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 1, 0 )
frames = SubResource( 4 )
playing = true

[node name="shot_timer" type="Timer" parent="."]
wait_time = 0.2

[node name="rotation_timer" type="Timer" parent="."]

[node name="bullet_positions" type="Node2D" parent="."]

[node name="B_spawn_1" type="Position2D" parent="bullet_positions"]
position = Vector2( 40, 0 )

[node name="B_target_1" type="Position2D" parent="bullet_positions"]
position = Vector2( 132, 0 )

[node name="B_spawn_2" type="Position2D" parent="bullet_positions"]
position = Vector2( 0, -38 )

[node name="B_target_2" type="Position2D" parent="bullet_positions"]
position = Vector2( 0, -110 )

[node name="B_spawn_3" type="Position2D" parent="bullet_positions"]
position = Vector2( -39, 0 )

[node name="B_target_3" type="Position2D" parent="bullet_positions"]
position = Vector2( -131, 0 )

[node name="B_target_4" type="Position2D" parent="bullet_positions"]
position = Vector2( 0, 108 )

[node name="B_spawn_4" type="Position2D" parent="bullet_positions"]
position = Vector2( 0, 36 )

[node name="Sprite" type="Sprite" parent="bullet_positions"]
texture = ExtResource( 3 )

[connection signal="timeout" from="shot_timer" to="." method="_on_shot_timer_timeout"]
[connection signal="timeout" from="rotation_timer" to="." method="_on_rotation_timer_timeout"]
